--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,6 +9,6 @@
   "JwtToken": {
     "Issuer": "FoodTrucksWebAPI",
     "Audience": "FoodTrucksWebAPI",
-    "Key": "70A28AFA-3BCD-4940-84DE-FB5821EE00D4"
+    "Key": ""
   }
 }
